Update JSDoc, fix API docs page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>vaadin-date-picker</title>
-
-  <script src="../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-  <script type="module" src="../../@polymer/polymer/polymer-element.js"></script>
-  <script type="module" src="../../@polymer/iron-component-page/iron-component-page.js"></script>
 </head>
 
 <body>
-  <iron-component-page src="vaadin-date-picker.html"></iron-component-page>
+  <iron-component-page src="vaadin-date-picker.js"></iron-component-page>
+
+  <script type="module">
+    import '@polymer/iron-component-page/iron-component-page.js';
+  </script>
 </body>
 
 </html>
